--- a/index.html
+++ b/index.html
@@ -3,9 +3,210 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap booting</title>
+    <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
+    <style>
+        h1{
+            color: green;
+        }
+        #flex-container{
+          height: 300px;
+          background-color: hotpink;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello form Bootstrap</h1>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">My own link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Alif Khan 1 AJ</a>
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+    <h1 style="text-align: center;">Hello form Bootstrap</h1>
+    <h1>1lesson. Button color</h1>
+    <button class="btn btn-primary">My button</button>
+    <button class="btn btn-secondary">My second</button>
+    <button class="btn btn-success">success</button>
+    <button class="btn btn-info">info</button>
+    <button class="btn btn-warning">warning</button>
+    <button class="btn btn-danger">danger</button>
+    <button class="btn btn-link">link</button>
+    <button class="btn btn-dark">dark</button>
+    <button class="btn btn-light">light</button><hr>
+    <h1>2lesson. paragraph color</h1>
+    <p class="text-primary">primary color paragraph Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque nisi, dolores pariatur placeat quam dolorem sunt doloremque voluptas commodi quisquam distinctio aut, iusto sequi cupiditate sed consequatur eaque asperiores deleniti?</p>
+    <p class="text-success">success color paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde tempore accusamus, voluptas provident sed voluptatem quo beatae numquam atque vero ab commodi accusantium veniam voluptates dicta. Perferendis tempora eligendi aperiam?</p><hr>
+    <h1>3lesson. background color</h1>
+    <div class="text-white bg-success"><p>success background color...... Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis odit totam nihil sequi, pariatur a vel ipsa. Aliquid obcaecati aut, est unde impedit minima facilis saepe, at maxime ab reiciendis?</p></div>
+    <div class="text-white bg-danger"><p>background color...... Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, recusandae sunt voluptatem dignissimos autem accusantium, voluptate ipsa blanditiis enim nostrum, provident deleniti tempora asperiores! Est ullam quaerat cupiditate at quos.</p></div>
+    <div class="text-white bg-success"><p>success background color..... Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae earum possimus magni blanditiis enim harum modi hic voluptate necessitatibus maxime magnam et, numquam fugiat dolore nihil animi laudantium. Voluptates, neque.</p></div><hr>
+    <h1>4lesson. Image, Responsive image, width style, image thumbnail.</h1>
+    <h2>A. images</h2>
+    <img class=" img-fluid w-25 rounded-circle img-thumbnail" src="images/forhadkhanaj.png" alt="">
+    <img src="images/forhadkhanaj2.png" class="img-fluid w-25 img-thumbnail" alt="">
+    <img src="images/jhankar.png" class="img-fluid w-25 img-thumbnail" alt="">
+    <img src="images/forhadkhanaj3.png" class="w-25 img-thumbnail img-fluid" alt="">
+    <img src="images/jhankar2.png" class="img-fluid img-thumbnail w-25" alt="">
+    <img src="images/forhadkhanaj3.png" class="img-fluid img-thumbnail w-25" alt="">
+    <img class="image-responsive img-fluid w-25 rounded-circle img-thumbnail" src="images/forhadkhanaj.png" alt=""><hr>
+    <h1>5lesson. Cards, Bootstrap</h1>
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="images/forhadkhanaj2.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Watch men selling</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">By now</a>
+        </div>
+      </div>
+      <h2>A. Card decks</h2>
+      <div class="card-deck">
+        <div class="card">
+          <img class="card-img-top" src="images/forhadkhanaj.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="images/forhadkhanaj2.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="images/jhankar.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div><hr>
+      <h1>6. navigation</h1>
+      <h2>a. nav navigation, avabeo</h2>
+      <nav class="nav">
+          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="#">Product</a>
+          <a class="nav-link" href="#">Shopping Card</a>
+          <a class="nav-link" href="#">Shipping</a>
+      </nav>
+      <h2>b. ul navigation, avabeo</h2>
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <h1>8lesson. Grid layout, row, column, 12 coloumn layout</h1>
+      <div class="container">
+      <h2>a. Grid</h2>
+      <div class="row">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+            <img class="img-fluid " src="images/forhadkhanaj2.png" alt="">
+        </div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae officiis sapiente officia, earum cumque iusto, impedit modi dignissimos pariatur atque nam inventore vero harum quis quod aperiam corporis libero reiciendis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa consequuntur rerum quidem nulla totam ut quia, laborum doloribus mollitia optio laboriosam hic eligendi dicta molestias iusto unde reiciendis quae facere. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum dolores numquam modi laudantium ab ipsa libero perferendis incidunt. Quod voluptas molestias molestiae repudiandae quae enim quos eos quasi nulla alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor perferendis hic, saepe ut nostrum, blanditiis distinctio sequi ducimus excepturi accusamus accusantium tempora molestiae reprehenderit iste velit ex quam sit consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero suscipit molestiae inventore perferendis ex quae dolorum! Perspiciatis accusantium at eos sunt libero nostrum, deleniti.
+          </p>
+        </div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae officiis sapiente officia, earum cumque iusto, impedit modi dignissimos pariatur atque nam inventore vero harum quis quod aperiam corporis libero reiciendis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa consequuntur rerum quidem nulla totam ut quia, laborum doloribus mollitia optio laboriosam hic eligendi dicta molestias iusto unde reiciendis quae facere. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum dolores numquam modi laudantium ab ipsa libero perferendis incidunt. Quod voluptas molestias molestiae repudiandae quae enim quos eos quasi nulla alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor perferendis hic, saepe ut nostrum, blanditiis distinctio sequi ducimus excepturi accusamus accusantium tempora molestiae reprehenderit iste velit ex quam sit consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero suscipit molestiae inventore perferendis ex quae dolorum! Perspiciatis accusantium at eos sunt libero nostrum, deleniti.
+          </p>
+        </div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae officiis sapiente officia, earum cumque iusto, impedit modi dignissimos pariatur atque nam inventore vero harum quis quod aperiam corporis libero reiciendis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa consequuntur rerum quidem nulla totam ut quia, laborum doloribus mollitia optio laboriosam hic eligendi dicta molestias iusto unde reiciendis quae facere. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum dolores numquam modi laudantium ab ipsa libero perferendis incidunt. Quod voluptas molestias molestiae repudiandae quae enim quos eos quasi nulla alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor perferendis hic, saepe ut nostrum, blanditiis distinctio sequi ducimus excepturi accusamus accusantium tempora molestiae reprehenderit iste velit ex quam sit consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero suscipit molestiae inventore perferendis ex quae dolorum! Perspiciatis accusantium at eos sunt libero nostrum, deleniti.
+          </p>
+          </div>
+      </div>
+    </div><hr>
+    <h1>10lesson. Carousel</h1>
+    <div class="container">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/forhadkhanaj.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/forhadkhanaj3.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/forhadkhanaj2.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <hr>
+    </div>
+    <div class="container">
+        <h1>11lesson. Flex Layout</h1>
+    <div class="d-flex flex-lg-row flex-sm-column flex-md-column-reverse">
+        <div>Shabana</div>
+        <div>Shabnoor</div>
+        <div>Shuchorita</div>
+    </div>
+    </div>
+    <div id="flex-container" class="d-flex align-items-center justify-content-center">
+      <div>Jacquline</div>
+      <div>Love</div>
+      <div>Heart</div>
+  </div>
+  </div>
+      
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
